ISS-12-1-47 Green Bar Section Spacing & Alignment Fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -6864,7 +6864,7 @@ div:last-child>.hpp-dtc-m-tipcard_holder {
 
 @media screen and (min-width:992px) {
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content {
-    /* padding-bottom: 12.4rem */
+    padding-bottom: 10rem;
   }
 
   .hpp-dtc-p-here-for-you .hpp-dtc-looking-for-resources__content .title {
